template/trinity-partch-march/trinity-large-preview:free-cot/row_62_update_5_template_20260310_033051.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Amazon Aurora MySQL Cluster with two db.t3.large instances and custom parameter groups

Parameters:
  VPCCIDR:
    Type: String
    Default: 10.0.0.0/16
    Description: CIDR block for the VPC
  PublicSubnet1CIDR:
    Type: String
    Default: 10.0.1.0/24
    Description: CIDR block for public subnet 1
  PublicSubnet2CIDR:
    Type: String
    Default: 10.0.2.0/24
    Description: CIDR block for public subnet 2
  DatabaseName:
    Type: String
    Default: mydb
    Description: Name of the database to create
  MasterUsername:
    Type: String
    Default: admin
    Description: Database master username
  DBInstanceClass:
    Type: String
    Default: db.t3.large
    Description: Database instance class
  EngineVersion:
    Type: String
    Default: 5.7.mysql_aurora.2.07.2
    Description: Aurora MySQL engine version

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: Aurora-VPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Aurora-IGW

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet1CIDR
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Aurora-Public-Subnet-1

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet2CIDR
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Aurora-Public-Subnet-2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Aurora-Public-Route-Table

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnets for Aurora cluster
      SubnetIds:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: Aurora-DB-Subnet-Group

  DBParameterGroup:
    Type: AWS::RDS::DBParameterGroup
    Properties:
      Description: Custom parameter group for Aurora MySQL
      Family: aurora-mysql5.7
      Parameters:
        time_zone: 'UTC'
        sql_mode: 'STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION'
      Tags:
        - Key: Name
          Value: Aurora-DB-Parameter-Group

  DBClusterParameterGroup:
    Type: AWS::RDS::DBClusterParameterGroup
    Properties:
      Description: Cluster parameter group for Aurora MySQL
      Family: aurora-mysql5.7
      Parameters:
        time_zone: 'UTC'
      Tags:
        - Key: Name
          Value: Aurora-Cluster-Parameter-Group

  DBCluster:
    Type: AWS::RDS::DBCluster
    Properties:
      Engine: aurora-mysql
      EngineVersion: !Ref EngineVersion
      DBClusterParameterGroupName: !Ref DBClusterParameterGroup
      DBSubnetGroupName: !Ref DBSubnetGroup
      DatabaseName: !Ref DatabaseName
      MasterUsername: !Ref MasterUsername
      MasterUserPassword: !Join ['', ['{{resolve:secretsmanager:', !Ref 'AWS::StackName', '-master-password}}']]
      Port: 3306
      BackupRetentionPeriod: 7
      PreferredBackupWindow: '03:00-04:00'
      PreferredMaintenanceWindow: 'mon:04:00-mon:05:00'
      VpcSecurityGroupIds:
        - !Ref DBClusterSecurityGroup
      DBClusterIdentifier: aurora-cluster
      StorageEncrypted: true
      EnableIAMDatabaseAuthentication: true

  DBClusterSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Aurora cluster
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Aurora-Cluster-SG

  DBInstance1:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceClass: !Ref DBInstanceClass
      Engine: aurora-mysql
      DBClusterIdentifier: !Ref DBCluster
      DBParameterGroupName: !Ref DBParameterGroup
      PubliclyAccessible: true
      Tags:
        - Key: Name
          Value: Aurora-Instance-1

  DBInstance2:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceClass: !Ref DBInstanceClass
      Engine: aurora-mysql
      DBClusterIdentifier: !Ref DBCluster
      DBParameterGroupName: !Ref DBParameterGroup
      PubliclyAccessible: true
      Tags:
        - Key: Name
          Value: Aurora-Instance-2

Outputs:
  DBClusterEndpoint:
    Description: Aurora cluster endpoint
    Value: !Join ['', [!GetAtt DBCluster.Endpoint, '']]
  ReaderEndpoint:
    Description: Aurora reader endpoint
    Value: !Join ['', [!GetAtt DBCluster.Endpoint, '-reader']]
  VPC:
    Description: VPC ID
    Value: !Ref VPC
  SecurityGroup:
    Description: Security group ID
    Value: !Ref DBClusterSecurityGroup
